Se agregan fragmentos para shoping

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -17,127 +17,128 @@
 
         <TextView
             android:id="@+id/tvAppName"
+            style="@style/h3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h3"
             android:layout_marginTop="50dp"
             android:drawableStart="@drawable/ic_kleine_shape"
             android:drawablePadding="6dp"
+            android:text="@string/app_name"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/app_name"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/letsLogin"
+            style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h4"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/tvAppName"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            android:gravity="center"
             android:text="Crea una cuenta."
             android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="35sp"/>
+            android:textSize="35sp"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/tvAppName" />
 
         <TextView
             android:id="@+id/tvDonthaveaAccount"
+            style="@style/h2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h2"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintTop_toBottomOf="@id/letsLogin"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="¿No tienes una cuenta? ¡Crea una!"
             android:layout_marginTop="15dp"
-            />
+            android:layout_marginEnd="32dp"
+            android:gravity="center"
+            android:text="Si ya tienes una cuenta inicia sesión."
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/letsLogin" />
 
         <ImageView
             android:id="@+id/facebookLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
+            android:src="@drawable/facebook_login"
             app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
-            android:src="@drawable/facebook_login"/>
+            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Facebook"
-            app:layout_constraintStart_toStartOf="@id/facebookLogin"
-            app:layout_constraintTop_toTopOf="@id/facebookLogin"
             app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
-            app:layout_constraintEnd_toEndOf="@id/facebookLogin"/>
+            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
+            app:layout_constraintStart_toStartOf="@id/facebookLogin"
+            app:layout_constraintTop_toTopOf="@id/facebookLogin" />
 
         <ImageView
             android:id="@+id/googleLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
+            android:src="@drawable/google_login"
             app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
-            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister"
-            android:src="@drawable/google_login"/>
+            app:layout_constraintTop_toBottomOf="@id/buttonRegisterRegister" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="google"
-            app:layout_constraintStart_toStartOf="@id/googleLogin"
-            app:layout_constraintTop_toTopOf="@id/googleLogin"
             app:layout_constraintBottom_toBottomOf="@id/googleLogin"
-            app:layout_constraintEnd_toEndOf="@id/googleLogin"/>
+            app:layout_constraintEnd_toEndOf="@id/googleLogin"
+            app:layout_constraintStart_toStartOf="@id/googleLogin"
+            app:layout_constraintTop_toTopOf="@id/googleLogin" />
 
 
         <EditText
             android:id="@+id/edEmailLogin"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
-            app:layout_constraintTop_toBottomOf="@id/tvDonthaveaAccount"
-            style="@style/editText"
+            android:layout_marginTop="50dp"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:layout_marginTop="50dp"/>
+            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/tvDonthaveaAccount" />
 
         <EditText
             android:id="@+id/edPasswordLogin"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
-            app:layout_constraintTop_toBottomOf="@id/edEmailLogin"
-            style="@style/editText"
+            android:layout_marginTop="15dp"
             android:hint="Password"
             android:inputType="textPassword"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/edEmailLogin" />
 
         <EditText
             android:id="@+id/edFirstName"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
-            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin"
-            style="@style/editText"
+            android:layout_marginTop="15dp"
             android:hint="Nombre(s)."
             android:inputType="textEmailAddress"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/edPasswordLogin" />
 
         <EditText
             android:id="@+id/edLastName"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
-            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
-            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
-            app:layout_constraintTop_toBottomOf="@id/edFirstName"
-            style="@style/editText"
+            android:layout_marginTop="15dp"
             android:hint="Apellido(s)."
             android:inputType="textEmailAddress"
-            android:layout_marginTop="15dp"/>
+            app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
+            app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
+            app:layout_constraintTop_toBottomOf="@id/edFirstName" />
 
 
         <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
@@ -145,14 +146,13 @@
             style="@style/blueButtonStyle"
             android:layout_width="0dp"
             android:layout_height="@dimen/mediumButtonHeight"
+            android:layout_marginTop="30dp"
             android:text="Registrar"
             app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
             app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
             app:layout_constraintTop_toBottomOf="@id/edLastName"
-            android:layout_marginTop="30dp"
-            tools:layout_editor_absoluteY="507dp"
-            app:spinning_bar_color="@color/white"/>
-
+            app:spinning_bar_color="@color/white"
+            tools:layout_editor_absoluteY="507dp" />
 
 
         <androidx.constraintlayout.widget.Guideline
@@ -170,11 +170,7 @@
             app:layout_constraintGuide_percent="0.91" />
 
 
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </FrameLayout>
