--- a/app/src/main/res/layout/fragment_account_options.xml
+++ b/app/src/main/res/layout/fragment_account_options.xml
@@ -69,14 +69,14 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonLoginAccountOptions"
+            style="@style/whiteButtonStyle"
             android:layout_width="@dimen/mediumButtonWith"
             android:layout_height="@dimen/mediumButtonHeight"
-            style="@style/whiteButtonStyle"
-            app:layout_constraintStart_toStartOf="@id/tvQualityTv"
-            app:layout_constraintEnd_toEndOf="@id/tvQualityTv"
-            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions"
             android:layout_marginTop="10dp"
-            android:text="Login"/>
+            android:text="Iniciar sesión"
+            app:layout_constraintEnd_toEndOf="@id/tvQualityTv"
+            app:layout_constraintStart_toStartOf="@id/tvQualityTv"
+            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions" />
 
 
 
