--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -98,7 +98,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
             android:layout_marginTop="50dp"
-            android:hint="Email"
+            android:hint="Correo electronico"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
             app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
@@ -110,7 +110,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/edittextHeight"
             android:layout_marginTop="15dp"
-            android:hint="Password"
+            android:hint="Contraseña"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@id/guidelineloginRight"
             app:layout_constraintStart_toStartOf="@id/guidelineloginLeft"
