--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -42,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="25dp"
                     android:fontFamily="@font/poppins_light"
-                    android:text="My Cart"
+                    android:text="Mi carrito"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@id/imageCloseCart"
@@ -150,7 +150,7 @@
             android:layout_height="@dimen/mediumButtonHeight"
             android:layout_marginTop="45dp"
             android:layout_marginBottom="20dp"
-            android:text="Check out"
+            android:text="Verificar"
             app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
             app:layout_constraintStart_toStartOf="@id/leftGuideLine"
             app:layout_constraintTop_toBottomOf="@id/totalBoxContainer"
@@ -191,7 +191,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_light"
                 android:gravity="center"
-                android:text="Your shopping cart is empty"
+                android:text="Tú carrito de compras está vacío."
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@id/imageEmptyBoxTexture"
